my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EILLCOMP/T_EILLCOMP-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EILLCOMP_STRUCT_H
#define T_EILLCOMP_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EILLCOMP(void);


#endif /* not T_EILLCOMP_STRUCT_H */
